修改编辑删除足迹和收藏界面

--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_agency_pay.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_agency_pay.xml
@@ -38,7 +38,7 @@
         android:id="@+id/refreshable_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/color_ffffff"
+        android:background="@color/user_bg"
         android:orientation="vertical">
 
         <ListView
