--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_my_voucher.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_my_voucher.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_bg_color"
+    android:background="@color/user_bg"
     android:clickable="true"
     android:orientation="vertical">
 
@@ -56,7 +56,7 @@
             android:layout_height="match_parent"
             android:background="@color/user_bg"
             android:cacheColorHint="#00000000"
-            android:divider="@color/app_bg_color"
+            android:divider="#00ffffff"
             android:dividerHeight="5dp"
             android:scrollbars="none"></ListView>
     </com.manyi.mall.widget.refreshview.NLPullRefreshView>
