--- a/BestarProject/ShoppingMall/src/main/res/layout/item_collect_list.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/item_collect_list.xml
@@ -10,13 +10,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/checkBox"
-        android:visibility="gone"
+        android:visibility="visible"
+        style="@style/CustomCheckboxTheme"
         />
     <ImageView
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:id="@+id/imgCollect"
+        android:layout_marginLeft="10dp"
         android:src="@drawable/take_photos_list_no__thumbnail" />
 
     <LinearLayout
