--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_footprintlist.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_footprintlist.xml
@@ -28,6 +28,7 @@
             android:src="@drawable/selector_edit_info_btn"
             android:background="@null"
             android:id="@+id/footEditBtn"
+            android:visibility="gone"
             />
         <View
             android:layout_width="match_parent"
