--- a/BestarProject/ShoppingMall/src/main/res/values/colors.xml
+++ b/BestarProject/ShoppingMall/src/main/res/values/colors.xml
@@ -120,7 +120,7 @@
     <color name="new_styel_award">#8a000000</color>
     <color name="raward_red">#ff5104</color>
 
-    <color name="app_theme_color">#FF4864</color>
+    <color name="app_theme_color">#ff3857</color>
     <color name="app_bg_color">#ffffff</color>
     <color name="main_tab_text_color">#7f7f7f</color>
     <color name="main_tab_text_color_h">#FF4864</color>
