--- a/BestarProject/ShoppingMall/src/main/res/drawable/shape_login_btn_bg_pre.xml
+++ b/BestarProject/ShoppingMall/src/main/res/drawable/shape_login_btn_bg_pre.xml
@@ -5,6 +5,6 @@
     <!-- 设置矩形的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
     <corners android:radius="@dimen/btn_radius_size" />
-    <solid android:color="@color/color_gray"></solid>
+    <solid android:color="#de2542"></solid>
 
 </shape>
