--- a/BestarProject/ShoppingMall/src/main/res/drawable/shape_mine_exit_btn_bg_pre.xml
+++ b/BestarProject/ShoppingMall/src/main/res/drawable/shape_mine_exit_btn_bg_pre.xml
@@ -3,9 +3,10 @@
     android:shape="rectangle" >
 
     <!-- 填充的颜色 -->
-    <solid android:color="#66000000" />
+    <solid android:color="#ffffff" />
     <!-- 设置矩形的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
     <corners android:radius="@dimen/btn_radius_size" />
+    <stroke android:color="#999999" android:width="1.5dp"></stroke>
 
 </shape>
