--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_feedback.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_feedback.xml
@@ -4,7 +4,7 @@
     android:id="@+id/register_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_bg_color"
+    android:background="@color/user_bg"
     android:clickable="true">
 
     <LinearLayout
@@ -40,7 +40,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/app_theme_color"></View>
+            android:background="@color/line_mine_color"></View>
 
         <LinearLayout
             android:layout_width="match_parent"
