--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_my_collect.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_my_collect.xml
@@ -30,6 +30,7 @@
             android:gravity="center"
             android:src="@drawable/selector_edit_info_btn"
             android:background="@null"
+            android:visibility="gone"
            />
         <View
             android:layout_width="match_parent"
