--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_my_voucher.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_my_voucher.xml
@@ -14,7 +14,7 @@
         android:tag="actionBar">
 
         <ImageButton
-            android:id="@+id/register_back"
+            android:id="@+id/daijinquanback"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:background="@null"
@@ -57,7 +57,7 @@
             android:background="@color/user_bg"
             android:cacheColorHint="#00000000"
             android:divider="#00ffffff"
-            android:dividerHeight="5dp"
+            android:dividerHeight="10dp"
             android:scrollbars="none"></ListView>
     </com.manyi.mall.widget.refreshview.NLPullRefreshView>
 </LinearLayout>
