--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_my_agency.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_my_agency.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_layout_height"
-        android:background="@color/app_theme_color"
+        android:background="@color/user_title_layout_bg"
         android:padding="0dp"
         android:tag="actionBar">
 
@@ -18,15 +18,22 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="我的代理"
-            android:textColor="#ffffffff"
+            android:textColor="#333"
             android:textSize="18sp" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/line_mine_color"
+            android:layout_alignParentBottom="true"
+            ></View>
     </RelativeLayout>
 
     <com.manyi.mall.widget.refreshview.NLPullRefreshView
         android:id="@+id/refreshable_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/color_ffffff"
+        android:background="@color/user_bg"
+        android:layout_marginTop="10dp"
         android:orientation="vertical">
 
         <ListView
