--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_product_wap.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_product_wap.xml
@@ -32,12 +32,12 @@
                 android:textSize="18sp" />
 
             <ImageButton
-                android:id="@+id/goonBtn"
+                android:id="@+id/eidtBtn"
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:background="@null"
-                android:src="@null" />
+                android:src="@drawable/selector_edit_info_btn" />
         </RelativeLayout>
         <View
             android:layout_width="match_parent"
