--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_my_collect.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_my_collect.xml
@@ -59,7 +59,7 @@
         android:background="@color/app_bg_color"
         android:gravity="center_vertical"
         android:orientation="vertical"
-        android:visibility="gone"
+        android:visibility="visible"
         >
 
         <View
