--- a/BestarProject/ShoppingMall/src/main/res/layout/item_footprint_list_product.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/item_footprint_list_product.xml
@@ -80,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:text="3256"
-                    android:textColor="#ff5104"
+                    android:textColor="#8a000000"
                     android:textSize="14sp" />
             </LinearLayout>
 
@@ -104,7 +104,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:text="3256"
-                    android:textColor="#ff5104"
+                    android:textColor="#8a000000"
                     android:textSize="14sp" />
             </LinearLayout>
 
@@ -128,7 +128,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:text="3256"
-                    android:textColor="#ff5104"
+                    android:textColor="#8a000000"
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
