--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_footprintlist.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_footprintlist.xml
@@ -81,6 +81,7 @@
                 android:text="全选"
                 android:textColor="#333"
                 android:textSize="18sp"
+                android:id="@+id/allCheckedView"
                 style="@style/CustomCheckboxTheme"
                 />
 
