add  about us  fragment

--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_mine.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_mine.xml
@@ -328,7 +328,7 @@
                             android:layout_alignParentRight="true"
                             android:layout_marginRight="10dp"
                             android:layout_centerVertical="true"
-                            android:src="@drawable/home_next" />
+                            android:src="@drawable/text" />
 
                     </RelativeLayout>
 
