--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_footprintlist.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_footprintlist.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/footprintLayout"
-    android:background="@color/app_bg_color"
+    android:background="@color/user_bg"
     >
     <RelativeLayout
         android:layout_width="match_parent"
