--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_search_product.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_search_product.xml
@@ -204,7 +204,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@id/selectLayoutLine"
-                    android:background="@color/color_ffffff"
+                    android:background="@color/user_bg"
                     android:orientation="vertical">
 
                     <com.huoqiu.widget.pinnedlistview.PinnedHeaderListView
