--- a/BestarProject/ShoppingMall/src/main/res/layout/item_footprint_list_sections.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/item_footprint_list_sections.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#fff"
+    android:background="@null"
     android:orientation="vertical" >
 	<View android:layout_width="match_parent"
 	    android:layout_height="0.5dp"
 	    android:background="#E5E5E5"
+        android:layout_marginTop="10dp"
 	    />
     <RelativeLayout
         android:layout_width="match_parent"
