--- a/BestarProject/ShoppingMall/src/main/res/layout/item_search_product_sections.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/item_search_product_sections.xml
@@ -2,44 +2,62 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#fff"
-    android:orientation="vertical" >
-	<View android:layout_width="match_parent"
-	    android:layout_height="0.5dp"
-	    android:background="#E5E5E5"
-	    />
+    android:background="@null"
+    android:orientation="vertical">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="10dp"
+        android:background="#E5E5E5" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#fff"
         android:orientation="vertical"
-        android:padding="10dp"
-         >
-        <TextView
-            android:id="@+id/companyNameTv"
-            android:layout_width="wrap_content"
+        android:padding="10dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="凯奇集团"
-            android:layout_marginLeft="10dp"
-            android:layout_centerVertical="true"
-            android:textColor="#dd000000"
+            android:layout_toLeftOf="@+id/cityNameTv"
             android:layout_toRightOf="@id/checkBox"
-            android:drawableRight="@drawable/diamond"
-            android:drawablePadding="10dp"
-            android:textSize="16sp" />
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:id="@+id/companyNameTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:text="凯奇集团"
+                android:singleLine="true"
+                android:textColor="#dd000000"
+                android:textSize="16sp" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/diamond"
+                android:id="@+id/isDiamond"
+                />
+        </LinearLayout>
+
         <TextView
             android:id="@+id/cityNameTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="上海"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:text="上海"
             android:textColor="#99000000"
             android:textSize="16sp" />
 
     </RelativeLayout>
-    <View android:layout_width="match_parent"
+
+    <View
+        android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="#E5E5E5"
-        />
+        android:background="#E5E5E5" />
 </LinearLayout>
