--- a/BestarProject/ShoppingMall/src/main/res/drawable/shape_home_top_search_bg.xml
+++ b/BestarProject/ShoppingMall/src/main/res/drawable/shape_home_top_search_bg.xml
@@ -6,6 +6,6 @@
     <solid android:color="#fff" />
     <!-- 设置矩形的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
-    <corners android:radius="@dimen/btn_radius_size" />
+    <corners android:radius="8dp" />
 
 </shape>
