--- a/BestarProject/ShoppingMall/src/main/res/layout/item_agency_list.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/item_agency_list.xml
@@ -1,95 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/section_item_selector"
-    android:padding="12dp">
-    <ImageView
-        android:id="@+id/imgCollect"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:adjustViewBounds="true"
-        android:src="@drawable/take_photos_list_no__thumbnail" />
+    android:orientation="vertical"
+    >
 
-    <LinearLayout
-        android:id="@+id/contentLayout"
+    <RelativeLayout android:layout_margin="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_toLeftOf="@+id/callBtn"
-        android:layout_toRightOf="@id/imgCollect"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/imgCollect"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:adjustViewBounds="true"
+            android:src="@drawable/take_photos_list_no__thumbnail" />
+
+        <LinearLayout
+            android:id="@+id/contentLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toLeftOf="@+id/callBtn"
+            android:layout_toRightOf="@id/imgCollect"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/companyNameTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="凯奇集团"
+                android:textColor="#dd000000"
+                android:textSize="@dimen/list_item_title_text_size" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="联系人："
+                    android:textColor="#2FBDF6"
+                    android:textSize="@dimen/list_item_content_text_size" />
+
+                <TextView
+                    android:id="@+id/connectTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="李老师"
+                    android:textColor="#2FBDF6"
+                    android:textSize="@dimen/list_item_content_text_size" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/callBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/selector_mine_exit_btn_bg"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="拨打电话"
+            android:textColor="@color/app_theme_color"
+            android:textSize="14sp" />
+
+    </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/line_mine_color"
+        ></View>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="top"
+        android:orientation="horizontal">
 
 
         <TextView
-            android:id="@+id/companyNameTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="凯奇集团"
-            android:textColor="#dd000000"
-            android:textSize="@dimen/list_item_title_text_size" />
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="联系人："
-                android:textColor="#8a000000"
-                android:textSize="@dimen/list_item_content_text_size" />
-
-            <TextView
-                android:id="@+id/connectTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:text="李老师"
-                android:textColor="#8a000000"
-                android:textSize="@dimen/list_item_content_text_size" />
-        </LinearLayout>
+            android:text="已代理地区："
+            android:padding="10dp"
+            android:textColor="@color/app_theme_color"
+            android:textSize="@dimen/list_item_content_text_size" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:id="@+id/agencyCityLayout"
+            android:gravity="top"
+            android:orientation="vertical">
 
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="已代理地区："
-                android:textColor="#8a000000"
-                android:textSize="@dimen/list_item_content_text_size" />
-
-            <TextView
-                android:id="@+id/agencyedTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:text="杭州  宁波..."
-                android:textColor="#8a000000"
-                android:textSize="@dimen/list_item_content_text_size" />
         </LinearLayout>
     </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/callBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:background="@null"
-        android:padding="10dp"
-        android:layout_centerVertical="true"
-        android:src="@drawable/icon_call" />
-</RelativeLayout>
+</LinearLayout>
