--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_home.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_home.xml
@@ -38,10 +38,6 @@
 
         </RelativeLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/line_mine_color"></View>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -67,14 +63,14 @@
                     <RelativeLayout
                         android:id="@+id/advertLayout"
                         android:layout_width="match_parent"
-                        android:layout_height="100dp"
+                        android:layout_height="200dp"
                         android:fadingEdge="none"
                         android:visibility="gone">
 
                         <com.huoqiu.widget.FangyouReleasedViewPage
                             android:id="@+id/view_page"
                             android:layout_width="match_parent"
-                            android:layout_height="100dp"
+                            android:layout_height="match_parent"
                             android:fadeScrollbars="false"
                             android:fadingEdge="none" />
 
