--- a/BestarProject/ShoppingMall/src/main/res/layout/item_search_product_sections.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/item_search_product_sections.xml
@@ -2,13 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@null"
+    android:background="@drawable/selector_section_bg"
     android:orientation="vertical">
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/user_bg" />
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_marginTop="10dp"
         android:background="#E5E5E5" />
 
     <RelativeLayout
