--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_business_wap.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_business_wap.xml
@@ -31,13 +31,16 @@
                 android:textColor="#333"
                 android:textSize="18sp" />
 
-            <ImageButton
-                android:id="@+id/goonBtn"
+            <Button
+                android:id="@+id/agencyBtn"
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:background="@null"
-                android:src="@null" />
+                android:textColor="@color/app_theme_color"
+                android:text="代理"
+                android:textSize="18sp"
+                 />
         </RelativeLayout>
         <View
             android:layout_width="match_parent"
