--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_add_agency.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_add_agency.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ecf0f1"
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/topLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_layout_height"
         android:background="@color/user_title_layout_bg"
@@ -21,11 +22,11 @@
             android:src="@drawable/back" />
 
         <TextView
+            android:id="@+id/agencyTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="我要代理"
-            android:id="@+id/agencyTitle"
             android:textColor="#333"
             android:textSize="18sp" />
 
@@ -36,28 +37,32 @@
             android:background="@color/line_mine_color"></View>
     </RelativeLayout>
 
-    <RelativeLayout android:padding="15dp"
+    <RelativeLayout
+        android:id="@+id/provinceLayout"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/topLayout"
+        android:layout_marginTop="15dp"
         android:background="#fff"
         android:clickable="true"
-        android:id="@+id/provinceLayout"
-        android:layout_marginTop="15dp"
-        android:layout_height="wrap_content">
+        android:padding="15dp">
 
-        <TextView android:text="所在省份"
-            android:textSize="16sp"
+        <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="所在省份"
+            android:textSize="16sp" />
 
-        <TextView android:text="浙江省"
-            android:textSize="16sp"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:gravity="center"
-            android:drawablePadding="10dp"
+        <TextView
             android:id="@+id/provinceNameTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:drawablePadding="10dp"
             android:drawableRight="@drawable/text"
-            android:layout_height="wrap_content" />
+            android:gravity="center"
+            android:text="浙江省"
+            android:textSize="16sp" />
 
     </RelativeLayout>
 
@@ -65,10 +70,29 @@
         android:id="@+id/cityListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/provinceLayout"
         android:layout_marginTop="10dp"
         android:background="#fff"
         android:cacheColorHint="#00000000"
         android:divider="#33000000"
         android:dividerHeight="0.5dp"
         android:scrollbars="none"></ListView>
-</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:background="@color/user_bg"
+        android:padding="10dp">
+
+        <Button
+            android:id="@+id/confirmBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/selector_submit_btn"
+            android:text="确定"
+            android:textColor="@color/tetx_title_color"
+            android:textSize="22sp" />
+    </LinearLayout>
+</RelativeLayout>
