--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_home.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_home.xml
@@ -17,8 +17,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/title_layout_height"
-            android:background="@color/app_theme_color"
-            android:padding="10dp">
+            android:background="@color/white"
+            >
 
             <TextView
                 android:id="@+id/searchEt"
@@ -31,10 +31,16 @@
                 android:gravity="center_vertical"
                 android:hint="请输入搜索内容"
                 android:paddingLeft="10dp"
+                android:layout_margin="10dp"
                 android:singleLine="true"
                 android:textColor="#a1a1a1"
                 android:textSize="14sp" />
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/line_mine_color"
+                android:layout_alignParentBottom="true"
+                ></View>
         </RelativeLayout>
 
 
